02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: tools
    name: tools
  name: tools
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      name: tools
  template:
    metadata:
      labels:
        app: tools
        name: tools
    spec:
      containers:
        - env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: status.podIP
            - name: OLLAMA_ENDPOINT
              value: http://ollama.ollama.svc.cluster.local:11434/api
          image: ghcr.io/kainlite/tools:4caa58983300b41e535a9dca201631269f8aec06
          imagePullPolicy: Always
          name: tools
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
      imagePullSecrets:
        - name: regcred
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
