03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tools
  namespace: tools
spec:
  selector:
    name: tools
  ports:
    - protocol: TCP
      name: web
      port: 3000
      targetPort: 3000
