04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tools-ingress
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - private.segfault.pw
    secretName: private-prod-tls
  rules:
  - host: private.segfault.pw
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tools
            port:
              number: 8080
